# Retichat-ios

./: .gitignore  APP_LINKS_HANDOFF.md  Info.plist  LICENSE  PushBridgeConfig.plist.example  README.md  build_rust.sh  decrypt_test.py  website-copy.md
NotificationService/: NotificationService-Bridging-Header.h  NotificationService.entitlements  NotificationService.swift
Retichat/: Retichat.entitlements  RetichatApp.swift
Retichat.xcodeproj/: project.pbxproj
Retichat.xcodeproj/xcshareddata/xcschemes/: Retichat.xcscheme
Retichat/Bridge/: CRetichatFFI.h  RetichatBridge.swift
Retichat/Models/: Models.swift  RNodeInterfaceProfile.swift  RNodeRadioConfig.swift
Retichat/Services/: ApnsBridgeHashes.swift  ApnsTokenRegistrar.swift  ChatRepository.swift  ConnectionStateManager.swift  DefaultEndpointManager.swift  GroupChatManager.swift  LxmfClient.swift  NetworkMonitor.swift  NotificationManager.swift  PendingNotification.swift  PropagationNodeManager.swift  RNodeBluetoothManager.swift  RNodeInterfaceCoordinator.swift  RfedChannelClient.swift  RfedNotifyRegistrar.swift  UserPreferences.swift
Retichat/Theme/: Theme.swift
rust/retichat-ffi/: Cargo.toml  HANDOFF.md
rust/retichat-ffi/src/: lib.rs
rust/retichat-ffi/tests/: announce.rs  client_lifecycle.rs  identity.rs  link_request.rs  messaging.rs  propagation.rs
rust/retichat-ffi/tests/helpers/: mod.rs
rust/retichat-ffi/tests/python/: rns_announcer.py  rns_prop_sender.py  rns_receiver.py  rns_sender.py
temp_rns_config/storage/: transport_identity
tests/: PullDecoderAndLinkTests.swift
(+19 files in other folders)
