[package]
name = "retichat-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
reticulum_rust = { path = "../../../Reticulum-rust", default-features = false }
lxmf_rust = { path = "../../../LXMF-rust" }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
hex = "0.4"
